# heifmgur

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
.github/workflows/: django.yml
api/: admin.py  fields.py  models.py  serializers.py  throttlers.py  utils.py  views.py
api/migrations/: 0001_initial.py
api/tests/: test_factory.py  test_requests.py  test_utils.py  util.py
api/utils/: img.py  tests.py
core/: asgi.py  routers.py  settings.py  urls.py  wsgi.py
heifmgur/: asgi.py  settings.py  wsgi.py
media/: logo.heif
